fix spacing in blocks, add bold to buttons

--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ body {
     align-items: center;
     justify-content: center;
     gap: 140px;
-    padding: 0px 200px;
+    padding: 50px 200px;
 }
 
 .title {
@@ -58,7 +58,7 @@ body {
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
-    padding: 0px 200px;
+    padding: 30px 200px;
 }
 
 .info-header {
@@ -72,7 +72,7 @@ body {
     justify-content: center;
     gap: 52px;
     margin: 30px;
-    margin-bottom: 200px;
+    margin-bottom: 120px;
 }
 
 .cards {
@@ -86,7 +86,7 @@ body {
 
 .quote-block {
     background-color: #e5e7eb;
-    padding: 0px 200px;
+    padding: 100px 200px;
     font-size: 36px;
     font-weight: lighter;
     font-style: italic;
@@ -106,12 +106,15 @@ body {
     padding: 0px 200px;
     display: flex;
     margin: 50px 200px;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     height: 130px;
 }
 
-
+.signup-block .text {
+    display: flex;
+    flex-direction: column;
+}
 
 .footer {
     background-color: #1f2937;
@@ -124,10 +127,16 @@ body {
 
 .buttons {
     color: #f9faf8;
+    font-weight: bold;
     border-radius: 5px;
     background: #3882f6;
     width: fit-content;
     padding: 5px 30px;
+}
+
+.signup-block .buttons {
+    border: 1px solid #f9faf8;
+    font-weight: bold;
 }
 
 ul {
